--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,12 @@ annual_provident_fund=100000
 annual_base_salary_raise=6
 
 #Number of years to forecast/calculate the EPF balance. If not provided then default 5 years will be considered.
-number_of_years=5
+number_of_years=6
 
-#The formatter class to provide. As of today only TabularFormatter is supported.
-formatter=TabularFormatter
+#The formatter class to provide. Currently below formatters are supported
+# 1. TabularFormatter
+# 2. HTMLFormatter
+formatter=HTMLFormatter
+
+#Name of the html report to be generated in case formatter is HTMLFormatter
+html_report_name=EPF_Projection_Data
