--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ formatter=HTMLFormatter
 #Name of the html report to be generated in case formatter is HTMLFormatter
 html_report_name=EPF_Projection_Data
 
-#Number of decimals to keep needed in decimal values. If not provided then default 2 decimal places will be considered.
+#Number of decimals needed in decimal values. If not provided then default 2 decimal places will be considered.
 #For now, its only working with HTMLFormatter; will be fixed to support TabularFormatter as well.
 decimal_places=4
