corrected test data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 interest=8.05
 
 #Existing EPF Balance amount.
-current_balance=1955000
+current_balance=800000
 
 #provide either annual_base_salary or annual_provident_fund
-annual_base_salary=1382500
+annual_base_salary=
 
 annual_provident_fund=100000
 
